Fixed iphone ui view and logo alignment for webview.

--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ textarea,
 
 .header.scrolled ~ .nav-toggle { top: 11px; }
 
-.header .logo { width: 372px; height: 41px; float: left; background: url(images/logo@2x.png) no-repeat 0 0; background-size: 100% 100%; }
+.header .logo { width: 372px; height: 41px; float: left; background: url(images/logo@2x.png) no-repeat 0 0; background-size: 100% 100%; position: fixed; margin-left: -3%; margin-top: 3px; }
 
 .header .shell { min-height: 46px; padding-top: 0; }
 
@@ -483,17 +483,22 @@ textarea,
 
 @media ( max-width: 1023px ) {
 	.header { padding: 30px 0; }
+	.header .logo { margin-left: -5%; }
 }
 
 @media ( max-width: 767px ) {
 	.header { height: 70px; }
-	.header .logo { width: 270px; height: 30px; position: relative; top: 3px; right: 12%;}
+	.header .logo { width: 270px; height: 30px; position: fixed; margin-left: -5%; }
 	.header .shell { min-height: 39px; }
 	.header.scrolled { padding: 18px 0; }
 }
 
+@media ( max-width: 374px ) {
+	.header .logo { margin-left: -9%; }
+}
+
 @media only screen and (min-device-width : 385px) and (max-device-width : 667px) and (orientation : landscape) {
-	.header .logo { right: 7%; }
+	.header .logo { margin-left: -3%; }
 }
 
 /* ------------------------------------------------------------ *\
@@ -1223,12 +1228,11 @@ input:-webkit-autofill { -webkit-text-fill-color: #05233c; border-color: #fff; b
 }
 
 @media ( max-width: 767px ) {
-	.nav-secondary { padding-right: 32px; position: relative; top: -32px;}
-
+	.nav-secondary { position: relative; }
 }
 
 @media only screen and (min-device-width : 385px) and (max-device-width : 667px) and (orientation : landscape){
-	.nav-secondary { padding-right: 32px; position: relative; top: 0px; }
+	.nav-secondary { position: relative; }
 }
 
 /* ------------------------------------------------------------ *\
@@ -1629,13 +1633,19 @@ input:-webkit-autofill { -webkit-text-fill-color: #05233c; border-color: #fff; b
 }
 
 @media ( max-width: 1023px ) {
-	.section-intro { padding: 50px 0; }
+	/*.section-intro { padding: 50px 0; }*/
 	
 	.section-intro .section-images { display: none; }
 	.section-intro .section-bubble { left: 0; margin: 0; }
 
 	.section-intro .section-content { width: auto; display: block; }
-	.section-intro .section-content-inner { max-width: 450px; margin: auto; }
+	.section-intro .section-content-inner { margin: auto; }
+
+	/* bellow code is to make carousel swipe effect from edge to edge. */
+	.section-intro .owl-carousel .owl-stage-outer { overflow: visible; }
+	.section-intro .section-container { margin-left: -2%; }
+	.section-intro .section-content-inner { max-width: initial; margin: auto; }
+	.section-intro .owl-stage-outer .owl-stage .owl-item { padding-left: 25px; padding-right: 25px; }	
 }
 
 @media ( max-width: 767px ) {
